--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.9",
     "formik": "^2.4.6",
     "lms": "file:",
+    "lucide-react": "^0.473.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.1",
@@ -37,4 +38,3 @@
     "vite": "^6.0.5"
   }
 }
-
