--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "axios": "^1.7.9",
     "formik": "^2.4.6",
     "lms": "file:",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.473.0",
     "react": "^18.3.1",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.1",
     "react-loading-skeleton": "^3.5.0",
