--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.5.1",
     "react-loading-skeleton": "^3.5.0",
+    "react-markdown": "^10.1.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.1",
+    "react-syntax-highlighter": "^15.6.1",
     "yup": "^1.6.1"
   },
   "devDependencies": {
