--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "start": "next start",
     "lint": "next lint",
-    "build": "NODE_OPTIONS=--max-old-space-size=4096 next build"
+    "build": "next build"
   },
   "dependencies": {
     "@hookform/resolvers": "latest",
