--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "my-v0-project": "file:",
     "next": "^14.2.26",
     "next-themes": "^0.4.4",
+    "pnpm": "^10.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "latest",
