--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "start": "next start",
     "lint": "next lint",
-    "build": "next build"
+    "build": "NODE_OPTIONS='--max-old-space-size=4096' next build"
   },
   "dependencies": {
     "@hookform/resolvers": "latest",
@@ -49,7 +49,6 @@
     "my-v0-project": "file:",
     "next": "^14.2.26",
     "next-themes": "^0.4.4",
-    "pnpm": "^10.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "latest",
